Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124228

[gstreamer] tst_QMediaCaptureSession::can_change_CameraDevice_on_attached_Camera crashes sometimes

XMLWordPrintable

    • Linux/X11
    • a4a4221d4 (dev), 137e2188b (6.7), b4d29b7d3 (6.6), e25d0181d (tqtc/lts-6.5), 2e132998b (dev), 69865dbd2 (6.7), d064af3a1 (tqtc/lts-6.5)
    • Multimedia wk 17-18, Multimedia wk 19-20, Multimedia wk 21-22

      `tst_QMediaCaptureSession::can_change_CameraDevice_on_attached_Camera` can crash:

      Thread 9 (Thread 0x7675da13a640 (LWP 688303) "camerasrc:src"):
      #0  0x0000767648eea42f in __GI___wait4 (pid=688717, stat_loc=0x0, options=0, usage=0x0) at ../sysdeps/unix/sysv/linux/wait4.c:30
      #1  0x000062a25efc7f3c in __interceptor_waitpid ()
      #2  0x0000767651767275 in QTest::CrashHandler::generateStackTrace() () at /home/tim/dev/qt6-dev/qtbase/src/testlib/qtestcrashhandler.cpp:363
      #3  0x0000767651768d0f in QTest::CrashHandler::FatalSignalHandler::actionHandler(int, siginfo_t*, void*) (signum=11, info=0x767624075af0) at /home/tim/dev/qt6-dev/qtbase/src/testlib/qtestcrashhandler.cpp:630
      #4  0x0000767648e42520 in <signal handler called> () at /lib/x86_64-linux-gnu/libc.so.6
      #5  0x000076762c2767cc in gst_v4l2_object_probe_caps (v4l2object=0x51800017c080, filter=0x0) at ../../dev/gstreamer/subprojects/gst-plugins-good/sys/v4l2/gstv4l2object.c:5024
      #6  0x000076762c276b41 in gst_v4l2_object_get_caps (v4l2object=0x51800017c080, filter=0x0) at ../../dev/gstreamer/subprojects/gst-plugins-good/sys/v4l2/gstv4l2object.c:5082
      #7  0x000076762c285ee6 in gst_v4l2src_get_caps (src=0x51900024eb60, filter=0x0) at ../../dev/gstreamer/subprojects/gst-plugins-good/sys/v4l2/gstv4l2src.c:870
      #8  0x00007676437b7692 in gst_base_src_default_query (src=0x51900024eb60, query=0x50700008fac0) at ../../dev/gstreamer/subprojects/gstreamer/libs/gst/base/gstbasesrc.c:1373
      #9  0x00007676437dcc82 in gst_push_src_query (src=0x51900024eb60, query=0x50700008fac0) at ../../dev/gstreamer/subprojects/gstreamer/libs/gst/base/gstpushsrc.c:113
      #10 0x000076762c2868ef in gst_v4l2src_query (bsrc=0x51900024eb60, query=0x50700008fac0) at ../../dev/gstreamer/subprojects/gst-plugins-good/sys/v4l2/gstv4l2src.c:1024
      #11 0x00007676437b78ae in gst_base_src_query (pad=0x529000098a30, parent=0x51900024eb60, query=0x50700008fac0) at ../../dev/gstreamer/subprojects/gstreamer/libs/gst/base/gstbasesrc.c:1422
      #12 0x0000767641d224a6 in gst_pad_query (pad=0x529000098a30, query=0x50700008fac0) at ../../dev/gstreamer/subprojects/gstreamer/gst/gstpad.c:4228
      #13 0x0000767641d7cfd6 in gst_pad_query_caps (pad=0x529000098a30, filter=0x0) at ../../dev/gstreamer/subprojects/gstreamer/gst/gstutils.c:3117
      #14 0x000076762c285ae5 in gst_v4l2src_negotiate (basesrc=0x51900024eb60) at ../../dev/gstreamer/subprojects/gst-plugins-good/sys/v4l2/gstv4l2src.c:781
      #15 0x00007676437be9cf in gst_base_src_negotiate_unlocked (basesrc=0x51900024eb60) at ../../dev/gstreamer/subprojects/gstreamer/libs/gst/base/gstbasesrc.c:3490
      #16 0x00007676437bc9f2 in gst_base_src_loop (pad=0x529000098a30) at ../../dev/gstreamer/subprojects/gstreamer/libs/gst/base/gstbasesrc.c:2915
      #17 0x0000767641d678b7 in gst_task_func (task=0x5250001b1950) at ../../dev/gstreamer/subprojects/gstreamer/gst/gsttask.c:399
      #18 0x0000767641d68df5 in default_func (tdata=0x502000385d90, pool=0x5210001d0520) at ../../dev/gstreamer/subprojects/gstreamer/gst/gsttaskpool.c:70
      #19 0x000076764954d6b4 in g_thread_pool_thread_proxy (data=<optimized out>) at ../../../glib/gthreadpool.c:350
      #20 0x000076764954aa51 in g_thread_proxy (data=0x51d0000a19e0) at ../../../glib/gthread.c:827
      #21 0x000062a25f03320b in asan_thread_start(void*) ()
      #22 0x0000767648e94ac3 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442
      #23 0x0000767648f26850 in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81
      Warning: the current language does not match this frame.
      

      this it seems that the caps negotiation is still active after we reset the camera device

        For Gerrit Dashboard: QTBUG-124228
        # Subject Branch Project Status CR V

            timblechmann tim blechmann
            timblechmann tim blechmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes