GStreamer: Camera - fix crash in unit test

It seems that changing the pipeline while the pipeline is "paused" is
not sufficient to guard against crashes: The GstV4l2Src element can have
active tasks, so we need to fully stop the camera before mutating the
pipeline.

Fixes: QTBUG-124228
Pick-to: 6.5 6.7
Change-Id: I9aaf678c2e4fb32027d11d7f5f3a17c0ae40e66c
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
Reviewed-by: Jøger Hansegård <joger.hansegard@qt.io>